# rpgmtranslate-qt

./: .gitignore  03-build-rpgmtranslate.ps1  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  plan.md  resources.qrc
.github/agents/: windows-static-build.agent.md
.github/workflows/: another.yml  build.yml  latest.yml  release.yml
custom_scripts/: 01-check-prerequisites.ps1  02-build-qt-static.ps1  03-build-rpgmtranslate-upx.ps1  03-build-rpgmtranslate.ps1  exe-syms.txt  old-01-check-prerequisites.ps1  old2-01-check-prerequisites.ps1  old3-02-build-qt-static.ps1  old3-03-build-rpgmtranslate.ps1  old4-02-build-qt-static.ps1
docs/: mkdocs.yml
docs/docs/: asset-inspector.md  batch-processing.md  build.md  development.md  git.md  glossary.md  index.md  rvpacker.md  search.md  settings.md  text-editing.md
docs/docs/ru/: build.md  glossary.md  search.md  settings.md  text-editing.md
rust/: Cargo.toml  cbindgen.toml
rust/src/: api.rs  ffi.rs
scripts/: 01-check-prerequisites.ps1  02-build-qt-static.ps1  03-build-rpgmtranslate.ps1  README.md
src/: main.cpp
src/AboutWindow/: AboutWindow.cpp  AboutWindow.hpp  AboutWindow.ui
src/AssetMenu/: AssetMenu.cpp  AssetMenu.hpp  AssetPreviewWidget.cpp  AssetPreviewWidget.hpp  CodeViewer.cpp  CodeViewer.hpp  GraphicsAssetViewer.cpp  GraphicsAssetViewer.hpp  MediaPlayer.cpp  MediaPlayer.hpp
src/AutoUpdater/: AutoUpdater.cpp
src/BatchMenu/: BatchMenu.cpp  BatchMenu.hpp  BatchMenu.ui
src/BookmarkMenu/: BookmarkList.cpp  BookmarkList.hpp  BookmarkMenu.cpp  BookmarkMenu.hpp
src/CBSLIWidget/: CBSLIWidget.cpp  CBSLIWidget.hpp
src/FFILogger/: FFILogger.hpp
src/FileSelectMenu/: FileSelectMenu.cpp  FileSelectMenu.hpp
src/GlossaryMenu/: GlossaryMenu.cpp  GlossaryMenu.hpp  GlossaryMenu.ui
src/MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/MatchMenu/: MatchMenu.cpp  MatchMenu.hpp  MatchTable.cpp  MatchTable.hpp
src/PersistentMenu/: PersistentMenu.cpp
src/PopupInput/: PopupInput.hpp
src/PurgeMenu/: PurgeMenu.cpp  PurgeMenu.hpp
src/ReadMenu/: ReadMenu.cpp  ReadMenu.hpp  ReadMenu.ui
src/SearchMenu/: SearchMenu.cpp  SearchMenu.hpp
src/SearchPanelDock/: SearchPanelDock.cpp  SearchPanelDock.hpp  SearchResultList.cpp  SearchResultList.hpp
src/Settings/: ProjectSettings.cpp  ProjectSettings.hpp  Settings.cpp  Settings.hpp
src/SettingsWindow/: PasswordLineEdit.hpp  SettingsWindow.cpp  SettingsWindow.hpp  SettingsWindow.ui  UnfocusLineEdit.hpp
src/SourceControlDock/: GitChangesList.cpp  GitChangesList.hpp  GitCommitList.cpp  GitCommitList.hpp  SourceControlDock.cpp  SourceControlDock.hpp
src/TabPanel/: TabList.cpp  TabList.hpp  TabListDelegate.cpp  TabListDelegate.hpp  TabListModel.cpp  TabListModel.hpp  TabPanel.cpp  TabPanel.hpp
src/TagFilter/: TagFilter.cpp  TagFilter.hpp
src/TaskWorker/: TaskWorker.cpp  TaskWorker.hpp
src/TranslationTable/: LabelInput.hpp  TranslationHighlighter.cpp  TranslationHighlighter.hpp  TranslationInput.cpp  TranslationInput.hpp  TranslationTable.cpp  TranslationTable.hpp  TranslationTableDelegate.cpp  TranslationTableDelegate.hpp  TranslationTableHeader.cpp  TranslationTableHeader.hpp  TranslationTableModel.cpp  TranslationTableModel.hpp
src/TranslationsMenu/: ClickableLabel.hpp  TranslationsMenu.cpp  TranslationsMenu.hpp
src/WriteMenu/: WriteMenu.cpp  WriteMenu.hpp
src/utilities/: Aliases.hpp  Constants.hpp  Enums.hpp  FWD.hpp  Types.hpp  Utils.cpp  Utils.hpp  ezgit2.hpp  miniaudio.cpp  rpgmtranslate.hpp
translations/: rpgmtranslate.en.ts  rpgmtranslate.ru.ts
